--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@ left: 0;
                 <!-- banner -->
                 <div class="banner-wrap"><div class="list-title">小视频点播APP</div>
                                          <a onclick="handleRouter('https://app.aff91.com/chan-1038/aff-JTgM','https://app.aff91.com/chan-1038/aff-JTgM')" target="_blank"><img src="./img/4444.png" width="100%" height="100%"></a>
-                                        <a onclick="handleRouter('https://ttt.tangbr.net/chan/a10073/gG26','https://ttt.tangbr.net/chan/a10073/gG26')" target="_blank"><img src="./img/3333.png" width="100%" height="100%"></a>
+                                        <a onclick="handleRouter('https://news.ttt001.net/chan/a10073/gG26','https://news.ttt001.net/chan/a10073/gG26')" target="_blank"><img src="./img/3333.png" width="100%" height="100%"></a>
                                          </div>
                 <div style="padding-bottom:1.4rem;">
                     <!-- 分类 -->
@@ -381,8 +381,8 @@ left: 0;
                                             汤头条 <span class="tj-wrap">推荐</span> </div>
                                         <div class="count">450 万次下载</div>
                                     </div>
-                                    <div class="btn-wrap btn-download" data-id="3" data-ioslink="https://ttt.tangbr.net/chan/a10073/gG26" target="_blank" data-androidlink="https://ttt.tangbr.net/chan/a10073/gG26" target="_blank">
-                                        <a href="https://ttt.tangbr.net/chan/a10073/gG26" target="_blank"><img src="./img/download.png" alt=""></a> 下载
+                                    <div class="btn-wrap btn-download" data-id="3" data-ioslink="https://news.ttt001.net/chan/a10073/gG26" target="_blank" data-androidlink="https://news.ttt001.net/chan/a10073/gG26" target="_blank">
+                                        <a href="https://news.ttt001.net/chan/a10073/gG26" target="_blank"><img src="./img/download.png" alt=""></a> 下载
                                     </div>
                                 </div>
                                 <div class="desc">全国首家中文成人自媒体平台。</div>
