--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@ left: 0;
                         </div>
 						<div class="item-wrap">
                             <div class="img-wrap" onclick="toinfo(3)">
-                                <a href="https://ttt.tangbr.info/chan/a10073/gG26" target="_blank"><img src="./img/tangtoutiao.png" alt="汤头条"></a>
+                                <a href="https://news.ttt001.net/chan/a10073/gG26" target="_blank"><img src="./img/tangtoutiao.png" alt="汤头条"></a>
                             </div>
                             <div class="content">
                                 <div class="row1">
