--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <style>
         html.pc,
         body.pc {
-            background: url(./img/bg.jpg) no-repeat;
+            background: url(https://cdn.jsdelivr.net/gh/niucnet/91xi@latest/img/bg.jpg) no-repeat;
             background-size: 100% auto;
         }
 
@@ -46,16 +46,16 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>牛C网91福利APP推荐</title>
-    <link rel="shortcut icon" href="./img/favicon.ico">
+    <link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/niucnet/91xi@latest/img/favicon.ico">
     <meta name="keywords" content="niuc,niuc.net,分享,破解,下载,免费,资源,种子,磁链,网赚,韩国演艺圈,李宗瑞,王梦溪,艳照,福利,微拍,塚本监督,牛C网,牛C,直播,apk,app,安卓,ios,苹果,直播,视频,手机,女优,小天仙,心上人,卡哇伊,小可爱,撸先生pro,嗨浪,茄子,爱情海,富二代,优乐美,咪哒,大波浪,红娘秀,初见,快手,抖音" />
     <meta name="description" content="牛C网 - 给你最完善的各类免费信息资源!小天仙,心上人,卡哇伊,小可爱,撸先生pro,嗨浪,茄子,爱情海,富二代,优乐美,咪哒,大波浪,红娘秀,初见,快手,抖音" />
-    <link rel="stylesheet" href="./img/iconfont_4.css">
-    <link rel="stylesheet" href="./img/common_4.css">
-    <link rel="stylesheet" href="./img/swiper.min_4.css">
-    <script src="./img/hm.js"></script><script src="./img/hm.js"></script><script src="./img/hm.js"></script><script src="./img/common_3.js"></script>
-    <script src="./img/jquery.min_4.js"></script>
-    <script src="./img/swiper.min_3.js"></script>
-    <script src="./img/jquery.qrcode.min_4.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/niucnet/91xi@latest/img/iconfont_4.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/niucnet/91xi@latest/img/common_4.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/niucnet/91xi@latest/img/swiper.min_4.css">
+    <script src="https://cdn.jsdelivr.net/gh/niucnet/91xi@latest/img/hm.js"></script><script src="https://cdn.jsdelivr.net/gh/niucnet/91xi@latest/img/hm.js"></script><script src="https://cdn.jsdelivr.net/gh/niucnet/91xi@latest/img/hm.js"></script><script src="https://cdn.jsdelivr.net/gh/niucnet/91xi@latest/img/common_3.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/niucnet/91xi@latest/img/jquery.min_4.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/niucnet/91xi@latest/img/swiper.min_3.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/niucnet/91xi@latest/img/jquery.qrcode.min_4.js"></script>
 </head>
 
 <body class="pc">
@@ -234,7 +234,7 @@ left: 0;
 <div class="bottommob" id="bottommob">
 <div class="bottom-con">
 <div class="bottom-pic">
-<img src="./img/chaguaner.png" style="width:100%; height:100%;" alt="">
+<img src="https://cdn.jsdelivr.net/gh/niucnet/91xi@latest/img/chaguaner.png" style="width:100%; height:100%;" alt="">
 </div>
 <div class="bottom-text" id="bottomText">茶馆儿</div>
 <div class="bottom-wenan" id="">在线海选全国高端外围，精品会所。</div>
@@ -261,7 +261,7 @@ left: 0;
             <div class="header-wrap">
                 <div class="header-inner">
                     <div class="col-center">
-                        <img src="./img/logo256.png" alt="" class="img-logo">
+                        <img src="https://cdn.jsdelivr.net/gh/niucnet/91xi@latest/img/logo256.png" alt="" class="img-logo">
                         <div class="site-name">牛C网91福利APP推荐</div>
                     </div>
                 </div>
@@ -282,7 +282,7 @@ left: 0;
                     <div class="list-wrap">
                         <div class="item-wrap">
                             <div class="img-wrap" onclick="toinfo(0)">
-                                <a href="https://club.i50dh.info/chan/h50156/busW" target="_blank"><img src="./img/50duhui.png" alt="50度灰"></a>
+                                <a href="https://club.i50dh.info/chan/h50156/busW" target="_blank"><img src="https://cdn.jsdelivr.net/gh/niucnet/91xi@latest/img/50duhui.png" alt="50度灰"></a>
                             </div>
                             <div class="content">
                                 <div class="row1">
@@ -292,7 +292,7 @@ left: 0;
                                         <div class="count">325 万次下载</div>
                                     </div>
                                     <div class="btn-wrap btn-download" data-id="0" data-ioslink="https://club.i50dh.info/chan/h50156/busW" target="_blank" data-androidlink="https://club.i50dh.info/chan/h50156/busW" target="_blank">
-                                        <a href="https://club.i50dh.info/chan/h50156/busW" target="_blank"><img src="./img/download.png" alt=""></a> 下载
+                                        <a href="https://club.i50dh.info/chan/h50156/busW" target="_blank"><img src="https://cdn.jsdelivr.net/gh/niucnet/91xi@latest/img/download.png" alt=""></a> 下载
                                     </div>
                                 </div>
                                 <div class="desc">想看SM、人妖、呦呦、恋物癖、人兽、猎奇等视频吗？</div>
@@ -300,7 +300,7 @@ left: 0;
                         </div>
                         <div class="item-wrap">
                             <div class="img-wrap" onclick="toinfo(10)">
-                                <a href="https://app.polomv.com/chan/bu0224/gHr" target="_blank"><img src="./img/boluoshipin.png" alt="菠萝视频"></a>
+                                <a href="https://app.polomv.com/chan/bu0224/gHr" target="_blank"><img src="https://cdn.jsdelivr.net/gh/niucnet/91xi@latest/img/boluoshipin.png" alt="菠萝视频"></a>
                             </div>
                             <div class="content">
                                 <div class="row1">
@@ -310,7 +310,7 @@ left: 0;
                                         <div class="count">155 万次下载</div>
                                     </div>
                                     <div class="btn-wrap btn-download" data-id="10" data-ioslink="https://app.polomv.com/chan/bu0224/gHr" target="_blank" data-androidlink="https://app.polomv.com/chan/bu0224/gHr" target="_blank">
-                                        <a href="https://app.polomv.com/chan/bu0224/gHr" target="_blank"><img src="./img/download.png" alt=""></a> 下载
+                                        <a href="https://app.polomv.com/chan/bu0224/gHr" target="_blank"><img src="https://cdn.jsdelivr.net/gh/niucnet/91xi@latest/img/download.png" alt=""></a> 下载
                                     </div>
                                 </div>
                                 <div class="desc">先有菠萝后有天，看看黄片赛神仙！美女直播大秀，国语成人视频。</div>
@@ -318,7 +318,7 @@ left: 0;
                         </div>
                         <div class="item-wrap">
                             <div class="img-wrap" onclick="toinfo(9)">
-                                <a href="https://a.91bx.me/chan-1013/aff-aCKw" target="_blank"><img src="./img/bixin.png" alt="比心视频"></a>
+                                <a href="https://a.91bx.me/chan-1013/aff-aCKw" target="_blank"><img src="https://cdn.jsdelivr.net/gh/niucnet/91xi@latest/img/bixin.png" alt="比心视频"></a>
                             </div>
                             <div class="content">
                                 <div class="row1">
@@ -328,7 +328,7 @@ left: 0;
                                         <div class="count">355 万次下载</div>
                                     </div>
                                     <div class="btn-wrap btn-download" data-id="9" data-ioslink="https://a.91bx.me/chan-1013/aff-aCKw" target="_blank" data-androidlink="https://a.91bx.me/chan-1013/aff-aCKw" target="_blank">
-                                        <a href="https://a.91bx.me/chan-1013/aff-aCKw" target="_blank"><img src="./img/download.png" alt=""></a> 下载
+                                        <a href="https://a.91bx.me/chan-1013/aff-aCKw" target="_blank"><img src="https://cdn.jsdelivr.net/gh/niucnet/91xi@latest/img/download.png" alt=""></a> 下载
                                     </div>
                                 </div>
                                 <div class="desc">网红不雅被流出？精品资源无处寻？一切尽在比心。</div>
@@ -336,7 +336,7 @@ left: 0;
                         </div>
                                       <div class="item-wrap">
                             <div class="img-wrap" onclick="toinfo(1)">
-                                <a href="https://download.91porn.tips/chan-1053/aff-cq4U3" target="_blank"><img src="./img/91shipin.png" alt="91短视频"></a>
+                                <a href="https://download.91porn.tips/chan-1053/aff-cq4U3" target="_blank"><img src="https://cdn.jsdelivr.net/gh/niucnet/91xi@latest/img/91shipin.png" alt="91短视频"></a>
                             </div>
                             <div class="content">
                                 <div class="row1">
@@ -346,7 +346,7 @@ left: 0;
                                         <div class="count">625 万次下载</div>
                                     </div>
                                     <div class="btn-wrap btn-download" data-id="1" data-ioslink="https://download.91porn.tips/chan-1053/aff-cq4U3" target="_blank" data-androidlink="https://download.91porn.tips/chan-1053/aff-cq4U3" target="_blank">
-                                        <a href="https://download.91porn.tips/chan-1053/aff-cq4U3" target="_blank"><img src="./img/download.png" alt=""></a> 下载
+                                        <a href="https://download.91porn.tips/chan-1053/aff-cq4U3" target="_blank"><img src="https://cdn.jsdelivr.net/gh/niucnet/91xi@latest/img/download.png" alt=""></a> 下载
                                     </div>
                                 </div>
                                 <div class="desc">记录性福生活，一边看片一边赚钱。</div>
@@ -354,7 +354,7 @@ left: 0;
                         </div>
 						<div class="item-wrap">
                             <div class="img-wrap" onclick="toinfo(2)">
-                                <a href="https://app.aff91.com/chan-1038/aff-JTgM" target="_blank"><img src="./img/91av.png" alt="91AV"></a>
+                                <a href="https://app.aff91.com/chan-1038/aff-JTgM" target="_blank"><img src="https://cdn.jsdelivr.net/gh/niucnet/91xi@latest/img/91av.png" alt="91AV"></a>
                             </div>
                             <div class="content">
                                 <div class="row1">
@@ -364,7 +364,7 @@ left: 0;
                                         <div class="count">520 万次下载</div>
                                     </div>
                                     <div class="btn-wrap btn-download" data-id="2" data-ioslink="https://app.aff91.com/chan-1038/aff-JTgM" target="_blank" data-androidlink="https://app.aff91.com/chan-1038/aff-JTgM" target="_blank">
-                                        <a href="https://app.aff91.com/chan-1038/aff-JTgM" target="_blank"><img src="./img/download.png" alt=""></a> 下载
+                                        <a href="https://app.aff91.com/chan-1038/aff-JTgM" target="_blank"><img src="https://cdn.jsdelivr.net/gh/niucnet/91xi@latest/img/download.png" alt=""></a> 下载
                                     </div>
                                 </div>
                                 <div class="desc">首创中文AV,一个说普通话的看片APP。</div>
@@ -372,7 +372,7 @@ left: 0;
                         </div>
 						<div class="item-wrap">
                             <div class="img-wrap" onclick="toinfo(3)">
-                                <a href="https://news.ttt001.net/chan/a10073/gG26" target="_blank"><img src="./img/tangtoutiao.png" alt="汤头条"></a>
+                                <a href="https://news.ttt001.net/chan/a10073/gG26" target="_blank"><img src="https://cdn.jsdelivr.net/gh/niucnet/91xi@latest/img/tangtoutiao.png" alt="汤头条"></a>
                             </div>
                             <div class="content">
                                 <div class="row1">
@@ -382,7 +382,7 @@ left: 0;
                                         <div class="count">450 万次下载</div>
                                     </div>
                                     <div class="btn-wrap btn-download" data-id="3" data-ioslink="https://news.ttt001.net/chan/a10073/gG26" target="_blank" data-androidlink="https://news.ttt001.net/chan/a10073/gG26" target="_blank">
-                                        <a href="https://news.ttt001.net/chan/a10073/gG26" target="_blank"><img src="./img/download.png" alt=""></a> 下载
+                                        <a href="https://news.ttt001.net/chan/a10073/gG26" target="_blank"><img src="https://cdn.jsdelivr.net/gh/niucnet/91xi@latest/img/download.png" alt=""></a> 下载
                                     </div>
                                 </div>
                                 <div class="desc">全国首家中文成人自媒体平台。</div>
@@ -390,7 +390,7 @@ left: 0;
                         </div>
 						<div class="item-wrap">
                             <div class="img-wrap" onclick="toinfo(4)">
-                                <a href="https://zb.91tvapi.me/chan/k10012/WxxF" target="_blank"><img src="./img/kuaishou.png" alt="快手成年版"></a>
+                                <a href="https://zb.91tvapi.me/chan/k10012/WxxF" target="_blank"><img src="https://cdn.jsdelivr.net/gh/niucnet/91xi@latest/img/kuaishou.png" alt="快手成年版"></a>
                             </div>
                             <div class="content">
                                 <div class="row1">
@@ -400,7 +400,7 @@ left: 0;
                                         <div class="count">855 万次下载</div>
                                     </div>
                                     <div class="btn-wrap btn-download" data-id="4" data-ioslink="https://zb.91tvapi.me/chan/k10012/WxxF" target="_blank" data-androidlink="https://zb.91tvapi.me/chan/k10012/WxxF" target="_blank">
-                                        <a href="https://zb.91tvapi.me/chan/k10012/WxxF" target="_blank"><img src="./img/download.png" alt=""></a> 下载
+                                        <a href="https://zb.91tvapi.me/chan/k10012/WxxF" target="_blank"><img src="https://cdn.jsdelivr.net/gh/niucnet/91xi@latest/img/download.png" alt=""></a> 下载
                                     </div>
                                 </div>
                                 <div class="desc">快手-真人一对多/一对一视频交友。</div>
@@ -408,7 +408,7 @@ left: 0;
                         </div>
 						<div class="item-wrap">
                             <div class="img-wrap" onclick="toinfo(5)">
-                                <a href="https://91.51rmc.com/chan-1048/aff-DxTN" target="_blank"><img src="./img/dingtong.png" alt="顶通漫画"></a>
+                                <a href="https://91.51rmc.com/chan-1048/aff-DxTN" target="_blank"><img src="https://cdn.jsdelivr.net/gh/niucnet/91xi@latest/img/dingtong.png" alt="顶通漫画"></a>
                             </div>
                             <div class="content">
                                 <div class="row1">
@@ -418,7 +418,7 @@ left: 0;
                                         <div class="count">380 万次下载</div>
                                     </div>
                                     <div class="btn-wrap btn-download" data-id="5" data-ioslink="https://91.51rmc.com/chan-1048/aff-DxTN" target="_blank" data-androidlink="https://91.51rmc.com/chan-1048/aff-DxTN" target="_blank">
-                                        <a href="https://91.51rmc.com/chan-1048/aff-DxTN" target="_blank"><img src="./img/download.png" alt=""></a> 下载
+                                        <a href="https://91.51rmc.com/chan-1048/aff-DxTN" target="_blank"><img src="https://cdn.jsdelivr.net/gh/niucnet/91xi@latest/img/download.png" alt=""></a> 下载
                                     </div>
                                 </div>
                                 <div class="desc">最新韩漫抢先更新，原创漫画独家资源。</div>
@@ -430,7 +430,7 @@ left: 0;
                     <div class="list-wrap">
 						<div class="item-wrap">
                             <div class="img-wrap" onclick="toinfo(7)">
-                                <a href="https://download.91didi.xyz/chan-1019/aff-fYsw" target="_blank"><img src="./img/91didi.png" alt="91滴滴"></a>
+                                <a href="https://download.91didi.xyz/chan-1019/aff-fYsw" target="_blank"><img src="https://cdn.jsdelivr.net/gh/niucnet/91xi@latest/img/91didi.png" alt="91滴滴"></a>
                             </div>
                             <div class="content">
                                 <div class="row1">
@@ -440,7 +440,7 @@ left: 0;
                                         <div class="count">625 万次下载</div>
                                     </div>
                                     <div class="btn-wrap btn-download" data-id="7" data-ioslink="https://download.91didi.xyz/chan-1019/aff-fYsw" data-androidlink="https://download.91didi.xyz/chan-1019/aff-fYsw">
-                                        <a href="https://download.91didi.xyz/chan-1019/aff-fYsw" target="_blank"><img src="./img/download.png" alt=""></a> 下载
+                                        <a href="https://download.91didi.xyz/chan-1019/aff-fYsw" target="_blank"><img src="https://cdn.jsdelivr.net/gh/niucnet/91xi@latest/img/download.png" alt=""></a> 下载
                                     </div>
                                 </div>
                                 <div class="desc">做不了王思聪，我还做不了王老五？</div>
@@ -448,7 +448,7 @@ left: 0;
                         </div>
 						<div class="item-wrap">
                             <div class="img-wrap" onclick="toinfo(8)">
-                                <a href="https://web.lanshuapi.com/c-126/a-atJUb" target="_blank"><img src="./img/91jiasuqi.png" alt="蚂蚁加速器"></a>
+                                <a href="https://web.lanshuapi.com/c-126/a-atJUb" target="_blank"><img src="https://cdn.jsdelivr.net/gh/niucnet/91xi@latest/img/91jiasuqi.png" alt="蚂蚁加速器"></a>
                             </div>
                             <div class="content">
                                 <div class="row1">
@@ -458,7 +458,7 @@ left: 0;
                                         <div class="count">325 万次下载</div>
                                     </div>
                                     <div class="btn-wrap btn-download" data-id="8" data-ioslink="https://web.lanshuapi.com/c-126/a-atJUb" data-androidlink="https://web.lanshuapi.com/c-126/a-atJUb">
-                                        <a href="https://web.lanshuapi.com/c-126/a-atJUb" target="_blank"><img src="./img/download.png" alt=""></a> 下载
+                                        <a href="https://web.lanshuapi.com/c-126/a-atJUb" target="_blank"><img src="https://cdn.jsdelivr.net/gh/niucnet/91xi@latest/img/download.png" alt=""></a> 下载
                                     </div>
                                 </div>
                                 <div class="desc">快速，稳定和安全地访问自由的互联网。</div>
@@ -473,8 +473,8 @@ left: 0;
     </div>
     <div class="screen-help">
         <div class="help-inner">
-            <img src="./img/screen-help-close.png" class="img-close">
-            <img src="./img/screen-help.png" class="screenshot">
+            <img src="https://cdn.jsdelivr.net/gh/niucnet/91xi@latest/img/screen-help-close.png" class="img-close">
+            <img src="https://cdn.jsdelivr.net/gh/niucnet/91xi@latest/img/screen-help.png" class="screenshot">
         </div>
     </div>
     <!--<div class="add-screen">
@@ -505,11 +505,11 @@ left: 0;
                     <div class="text">Android 版</div>
                 </div>
             </div>
-            <div class="close-wrap" target="_blank"><img src="./img/close.png" alt="close"></div>
+            <div class="close-wrap" target="_blank"><img src="https://cdn.jsdelivr.net/gh/niucnet/91xi@latest/img/close.png" alt="close"></div>
         </div>
     </div>
 <div class="qrcode_piao">
-        <img src="./img/91porn.png">
+        <img src="https://cdn.jsdelivr.net/gh/niucnet/91xi@latest/img/91porn.png">
         <div>手机扫描打开</div>
 </div>   
      <script>
