--- a/index.html
+++ b/index.html
@@ -280,6 +280,24 @@ left: 0;
                     <div class="list-title">福利视频APP推荐</div>
                     <!-- 分类app -->
                     <div class="list-wrap">
+					<div class="item-wrap">
+                            <div class="img-wrap" onclick="toinfo(0)">
+                                <a href="http://app.iwanna.me/chan-1015/aff-ar4" target="_blank"><img src="https://cdn.jsdelivr.net/gh/niucnet/91xi@latest/img/qiyou.png" alt="妻友"></a>
+                            </div>
+                            <div class="content">
+                                <div class="row1">
+                                    <div class="col-left" onclick="toinfo(0)">
+                                        <div class="name">
+                                            妻友 <span class="tj-wrap">推荐</span> </div>
+                                        <div class="count">95 万次下载</div>
+                                    </div>
+                                    <div class="btn-wrap btn-download" data-id="0" data-ioslink="http://app.iwanna.me/chan-1015/aff-ar4" target="_blank" data-androidlink="http://app.iwanna.me/chan-1015/aff-ar4" target="_blank">
+                                        <a href="http://app.iwanna.me/chan-1015/aff-ar4" target="_blank"><img src="https://cdn.jsdelivr.net/gh/niucnet/91xi@latest/img/download.png" alt=""></a> 下载
+                                    </div>
+                                </div>
+                                <div class="desc">网红不雅被流出？精品资源无处寻？一切尽在妻友！</div>
+                            </div>
+                        </div>
                         <div class="item-wrap">
                             <div class="img-wrap" onclick="toinfo(0)">
                                 <a href="https://club.i50dh.info/chan/h50156/busW" target="_blank"><img src="https://cdn.jsdelivr.net/gh/niucnet/91xi@latest/img/50duhui.png" alt="50度灰"></a>
