--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@ left: 0;
                         </div>
                         <div class="item-wrap">
                             <div class="img-wrap" onclick="toinfo(0)">
-                                <a href="https://club.i50dh.info/chan/h50156/busW" target="_blank"><img src="https://cdn.jsdelivr.net/gh/niucnet/91xi@latest/img/50duhui.png" alt="50度灰"></a>
+                                <a href="https://club.i50dh.net/chan/h50156/busW" target="_blank"><img src="https://cdn.jsdelivr.net/gh/niucnet/91xi@latest/img/50duhui.png" alt="50度灰"></a>
                             </div>
                             <div class="content">
                                 <div class="row1">
@@ -309,8 +309,8 @@ left: 0;
                                             50度灰 <span class="tj-wrap">推荐</span> </div>
                                         <div class="count">325 万次下载</div>
                                     </div>
-                                    <div class="btn-wrap btn-download" data-id="0" data-ioslink="https://club.i50dh.info/chan/h50156/busW" target="_blank" data-androidlink="https://club.i50dh.info/chan/h50156/busW" target="_blank">
-                                        <a href="https://club.i50dh.info/chan/h50156/busW" target="_blank"><img src="https://cdn.jsdelivr.net/gh/niucnet/91xi@latest/img/download.png" alt=""></a> 下载
+                                    <div class="btn-wrap btn-download" data-id="0" data-ioslink="https://club.i50dh.net/chan/h50156/busW" target="_blank" data-androidlink="https://club.i50dh.net/chan/h50156/busW" target="_blank">
+                                        <a href="https://club.i50dh.net/chan/h50156/busW" target="_blank"><img src="https://cdn.jsdelivr.net/gh/niucnet/91xi@latest/img/download.png" alt=""></a> 下载
                                     </div>
                                 </div>
                                 <div class="desc">想看SM、人妖、呦呦、恋物癖、人兽、猎奇等视频吗？</div>
