--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@ left: 0;
                         </div>
                                       <div class="item-wrap">
                             <div class="img-wrap" onclick="toinfo(1)">
-                                <a href="https://download.91porn.tips/chan-1053/aff-cq4U3" target="_blank"><img src="https://cdn.jsdelivr.net/gh/niucnet/91xi@latest/img/91shipin.png" alt="91短视频"></a>
+                                <a href="http://download.91porn.love/chan-1053/aff-cq4U3" target="_blank"><img src="https://cdn.jsdelivr.net/gh/niucnet/91xi@latest/img/91shipin.png" alt="91短视频"></a>
                             </div>
                             <div class="content">
                                 <div class="row1">
@@ -363,8 +363,8 @@ left: 0;
                                             91短视频 <span class="tj-wrap">推荐</span> </div>
                                         <div class="count">625 万次下载</div>
                                     </div>
-                                    <div class="btn-wrap btn-download" data-id="1" data-ioslink="https://download.91porn.tips/chan-1053/aff-cq4U3" target="_blank" data-androidlink="https://download.91porn.tips/chan-1053/aff-cq4U3" target="_blank">
-                                        <a href="https://download.91porn.tips/chan-1053/aff-cq4U3" target="_blank"><img src="https://cdn.jsdelivr.net/gh/niucnet/91xi@latest/img/download.png" alt=""></a> 下载
+                                    <div class="btn-wrap btn-download" data-id="1" data-ioslink="http://download.91porn.love/chan-1053/aff-cq4U3" target="_blank" data-androidlink="http://download.91porn.love/chan-1053/aff-cq4U3" target="_blank">
+                                        <a href="http://download.91porn.love/chan-1053/aff-cq4U3" target="_blank"><img src="https://cdn.jsdelivr.net/gh/niucnet/91xi@latest/img/download.png" alt=""></a> 下载
                                     </div>
                                 </div>
                                 <div class="desc">记录性福生活，一边看片一边赚钱。</div>
